# reqivo

./: .git-commit-template.txt  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  cliff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/security-scan/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: roadmap.md
docs/source/: conf.py  index.rst  intro.md  reqivo.client.rst  reqivo.http.rst  reqivo.rst  reqivo.server.rst  reqivo.transport.rst  reqivo.utils.rst
docs/source/_templates/: sidebar_nav.html
docs/source/_templates/apidoc/: package.rst_t
docs/source/architecture/: ARCHITECTURE.md  PROJECT_ANALYSIS.md  ROADMAP.md
docs/source/architecture/ADR/: 0000-ADR.md  0001-zero-dependencies-policy.md  0002-async-first-architecture.md  0003-session-based-state-management.md  0004-lifo-connection-pooling.md  0005-http11-before-http2.md  0006-granular-exception-hierarchy.md  0007-memory-optimization-with-slots.md  0008-strict-type-safety.md  0009-97-percent-test-coverage-minimum.md  0010-limited-public-api-surface.md  0011-three-layer-architecture.md  0012-manual-http-parsing.md  0013-python-39-minimum-version.md  0014-test-structure-organization.md  index.rst  (+4 more)
docs/source/development/: AGENTS.md  TEST_MAPPING.md
examples/: README.md  advanced_usage.md  async_patterns.md  error_handling.md  quick_start.md  session_management.md
src/reqivo/: __init__.py  exceptions.py  version.py
src/reqivo/client/: __init__.py  auth.py  facade.py  request.py  response.py  session.py  websocket.py
src/reqivo/http/: __init__.py  body.py  headers.py  http11.py  status_codes.py  url.py
src/reqivo/server/: __init__.py
src/reqivo/transport/: __init__.py  connection.py  connection_pool.py  selectors.py  tls.py
src/reqivo/utils/: __init__.py  serialization.py  timing.py  validators.py  websocket_utils.py
tests/: conftest.py
tests/integration/: test_async_integration.py  test_http_integration.py
tests/unit/: __init__.py  test_body.py  test_connection.py  test_connection_pool.py  test_exceptions.py  test_extra_coverage.py  test_facade.py  test_headers.py  test_hooks.py  test_http_methods.py  test_http_parser.py  test_limits.py  test_pool_cleanup.py  test_pool_limits.py  test_redirects.py  test_request.py  test_response.py  test_response_duplicates.py  test_session.py  test_streaming_upload.py  test_timeouts.py  test_timing.py  test_tls.py  test_url.py  test_utils.py  test_version.py  test_websocket.py  test_websocket_reconnect.py  test_websocket_utils.py
