[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Reqivo"
dynamic = ["version"]
description = "A modern, async-first HTTP client library for Python"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Rodrigo Ezequiel Roldán", email = "roldriel@gmail.com" }
]
keywords = [
    "http",
    "client",
    "async",
    "request",
    "api"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
docs = ["sphinx", "myst-parser", "furo"]
test = ["pytest", "coverage", "pytest-asyncio"]

[project.urls]
repository = "https://github.com/roldriel/reqivo"
documentation = "https://roldriel.github.io/reqivo/"
"Bug Tracker" = "https://github.com/roldriel/reqivo/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "reqivo.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "integration: tests de integración que requieren red"
]
filterwarnings = [
    "error",
]

[tool.pylint.master]
ignore = "tests"
fail-under = 10.0

[tool.pylint."messages control"]
disable = "R0903,R0801,W0511"

[tool.pylint.format]
max-line-length = 88

[tool.pylint.reports]
output-format = "colorized"
score = true

[tool.pylint.design]
min-public-methods = 0

[tool.coverage.run]
source = ["reqivo"]
omit = [
    "*/__init__.py",
    "tests/*",
    "setup.py",
    "src/reqivo/integrations/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]
show_missing = true
fail_under = 97

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
files = ["src"]

[tool.coverage.html]
directory = "htmlcov"
